[gd_scene load_steps=29 format=2]

[ext_resource path="res://objects/kilo/scripts/player.gd" type="Script" id=1]
[ext_resource path="res://objects/kilo/asset/bubble.png" type="Texture" id=2]
[ext_resource path="res://objects/kilo/kilo_sprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/kilo/scripts/fsm.gd" type="Script" id=4]
[ext_resource path="res://objects/kilo/scripts/idle.gd" type="Script" id=5]
[ext_resource path="res://objects/kilo/scripts/run.gd" type="Script" id=6]
[ext_resource path="res://objects/kilo/scripts/slide.gd" type="Script" id=7]
[ext_resource path="res://objects/kilo/scripts/duck.gd" type="Script" id=8]
[ext_resource path="res://objects/kilo/scripts/jump.gd" type="Script" id=9]
[ext_resource path="res://objects/kilo/scripts/fall.gd" type="Script" id=10]
[ext_resource path="res://objects/kilo/scripts/attack.gd" type="Script" id=11]
[ext_resource path="res://objects/kilo/scripts/attack_jumping.gd" type="Script" id=12]
[ext_resource path="res://objects/kilo/scripts/air_dash.gd" type="Script" id=13]
[ext_resource path="res://objects/kilo/scripts/wall_jump.gd" type="Script" id=14]
[ext_resource path="res://objects/kilo/scripts/wall_slide.gd" type="Script" id=15]
[ext_resource path="res://objects/kilo/scripts/float.gd" type="Script" id=16]
[ext_resource path="res://objects/kilo/scripts/swim.gd" type="Script" id=17]
[ext_resource path="res://objects/kilo/scripts/die.gd" type="Script" id=18]
[ext_resource path="res://objects/kilo/scripts/hit.gd" type="Script" id=19]
[ext_resource path="res://objects/kilo/scripts/template.gd" type="Script" id=20]
[ext_resource path="res://objects/kilo/scripts/controls.gd" type="Script" id=21]
[ext_resource path="res://objects/kilo/scripts/motion.gd" type="Script" id=22]
[ext_resource path="res://objects/kilo/scripts/updater.gd" type="Script" id=23]
[ext_resource path="res://objects/kilo/scripts/collision.gd" type="Script" id=24]
[ext_resource path="res://objects/kilo/scripts/camera.gd" type="Script" id=25]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 55 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 55, 20 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.0133929, 0.635568 ), 0.0, 0.0, 0, 0, Vector2( 0.995536, 1 ), 0.0, 0.0, 0, 0 ]

[node name="kilo" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="positions" type="Node" parent="."]
editor/display_folded = true

[node name="head_marker" type="Position2D" parent="positions"]
position = Vector2( 0.402428, -39.0775 )

[node name="torso_marker" type="Position2D" parent="positions"]
position = Vector2( 0.269005, -27.5292 )

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2( 1.78253, -58.3728 )
shape = SubResource( 1 )

[node name="swim_collider" type="CollisionShape2D" parent="."]
position = Vector2( 4.15764, -23.9759 )
shape = SubResource( 2 )
disabled = true

[node name="sprite" type="Node2D" parent="."]
scale = Vector2( 0.6, 0.6 )

[node name="bubble" type="CPUParticles2D" parent="sprite"]
position = Vector2( 76, -61 )
rotation = -1.73311
scale = Vector2( 0.6, 0.6 )
emitting = false
amount = 2
lifetime = 2.0
speed_scale = 3.21
texture = ExtResource( 2 )
emission_shape = 3
emission_points = PoolVector2Array(  )
emission_colors = PoolColorArray(  )
spread = 18.62
gravity = Vector2( 0, 0 )
initial_velocity = 80.0
scale_amount_curve = SubResource( 3 )

[node name="sprite" parent="sprite" instance=ExtResource( 3 )]
scale = Vector2( 0.6, 0.6 )

[node name="fsm" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 4 )

[node name="idle" type="Node" parent="fsm"]
script = ExtResource( 5 )

[node name="run" type="Node" parent="fsm"]
script = ExtResource( 6 )

[node name="slide" type="Node" parent="fsm"]
editor/display_folded = true
script = ExtResource( 7 )

[node name="slide_timer" type="Timer" parent="fsm/slide"]
wait_time = 0.6
one_shot = true

[node name="duck" type="Node" parent="fsm"]
script = ExtResource( 8 )

[node name="jump" type="Node" parent="fsm"]
script = ExtResource( 9 )

[node name="fall" type="Node" parent="fsm"]
script = ExtResource( 10 )

[node name="attack" type="Node" parent="fsm"]
script = ExtResource( 11 )

[node name="attack_jumping" type="Node" parent="fsm"]
script = ExtResource( 12 )

[node name="air_dash" type="Node" parent="fsm"]
script = ExtResource( 13 )

[node name="timer" type="Timer" parent="fsm/air_dash"]
wait_time = 0.2
one_shot = true

[node name="wall_jump" type="Node" parent="fsm"]
script = ExtResource( 14 )

[node name="wall_slide" type="Node" parent="fsm"]
script = ExtResource( 15 )

[node name="wall_stick_timer" type="Timer" parent="fsm/wall_slide"]
wait_time = 0.3
one_shot = true

[node name="float" type="Node" parent="fsm"]
script = ExtResource( 16 )

[node name="swim" type="Node" parent="fsm"]
script = ExtResource( 17 )

[node name="die" type="Node" parent="fsm"]
script = ExtResource( 18 )

[node name="hit" type="Node" parent="fsm"]
script = ExtResource( 19 )

[node name="hit_timer" type="Timer" parent="fsm/hit"]
one_shot = true

[node name="template" type="Node" parent="fsm"]
script = ExtResource( 20 )

[node name="controls" type="Node" parent="."]
script = ExtResource( 21 )

[node name="motion" type="Node" parent="."]
script = ExtResource( 22 )

[node name="updater" type="Node" parent="."]
script = ExtResource( 23 )

[node name="collision" type="Node" parent="."]
script = ExtResource( 24 )

[node name="camera" type="Camera2D" parent="."]
limit_left = -32
limit_top = -300
limit_right = 3064
limit_bottom = 1400
limit_smoothed = true
smoothing_enabled = true
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.8
script = ExtResource( 25 )

[node name="label" type="Label" parent="."]
margin_left = -2.0
margin_top = -215.5
margin_right = 55.0
margin_bottom = -191.5
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="RayCast2D" parent="."]
position = Vector2( -16.4791, -64.5165 )
enabled = true
cast_to = Vector2( -10, 0 )

[node name="right" type="RayCast2D" parent="."]
position = Vector2( 20.4871, -62.3225 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="down" type="RayCast2D" parent="."]
position = Vector2( 1.2083, -5.88729 )
enabled = true
cast_to = Vector2( 0, 10 )
[connection signal="timeout" from="fsm/slide/slide_timer" to="fsm/slide" method="_on_slide_timer_timeout"]
[connection signal="timeout" from="fsm/air_dash/timer" to="fsm/air_dash" method="_on_timer_timeout"]
[connection signal="timeout" from="fsm/wall_slide/wall_stick_timer" to="fsm/wall_slide" method="_on_wall_slide_timer_timeout"]
[connection signal="timeout" from="fsm/hit/hit_timer" to="fsm/hit" method="_on_hit_timer_timeout"]
